# wl-cube

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  cmake.sh  controls.cc  debug.mk  frame.cc  gl.cc  gmath.cc  input.cc  main.cc  mainLoop.cc  math.cc  meson.build  meson_options.txt  mmath.cc  model.cc  name  parser.cc  run-debug.bat  run-debug.sh  run.sh  shader.cc  texture.cc  utils.cc  wayland.cc  wl-cube.sh
gltf/: gltf.cc  gltf.hh
headers/: app.hh  colors.hh  controls.hh  frame.hh  gl.hh  gmath.hh  input.hh  main.hh  math.hh  mmath.hh  model.hh  parser.hh  shader.hh  texture.hh  ultratypes.h  utils.hh  wayland.hh
include/: threadpool.hh  utils.cc  utils.hh
json/: ast.hh  lex.cc  lex.hh  parser.cc  parser.hh
platform/: glad.cc  glad.h
platform/wayland/: input.cc  input.hh  wayland.cc  wayland.hh
platform/windows/: input.cc  windows.cc  windows.hh
shaders/: blinnPhongUB.frag  blinnPhongUB.vert  depthMap.frag  depthMap.vert  fb.frag  fb.vert  gouraud.frag  gouraud.vert  gouraudUB.vert  ht.frag  ht.vert  light.frag  light.vert  normalMapping.frag  normalMapping.geom  normalMapping.vert  phong.frag  phong.vert  simple.frag  simple.vert  simpleTex.frag  simpleTex.vert  simpleUB.vert
shaders/normalMapping/: default.geom  default.vert
shaders/shadows/: debugQuad.frag  debugQuad.vert  depth.frag  depth.vert  shadows.frag  shadows.vert
shaders/shadows/cubeMap/: cubeMapDepth.frag  cubeMapDepth.geom  cubeMapDepth.vert  omniDirShadow.frag  omniDirShadow.vert
src/: app.hh  controls.cc  controls.hh  frame.cc  frame.hh  gmath.cc  gmath.hh  main.cc  model.cc  model.hh  parser.cc  parser.hh  rng.cc  rng.hh  shader.cc  shader.hh  texture.cc  texture.hh
src/gl/: gl.cc  gl.hh
src/gltf/: gltf.cc  gltf.hh
src/json/: ast.hh  lex.cc  lex.hh  parser.cc  parser.hh
src/parser/: bin.cc  bin.hh  obj.cc  obj.hh
src/platform/wayland/: input.cc  input.hh  wayland.cc  wayland.hh
src/platform/windows/: input.cc  input.hh  windows.cc  windows.hh
test-assets/models/Sponza/: sponza.mtl
test-assets/models/Sponza/glTF/: Sponza.gltf
test-assets/models/ToyCar/: ToyCar.gltf
test-assets/models/backpack/: scene.gltf
test-assets/models/cube/: cube.mtl
test-assets/models/duck/: Duck.gltf
test-assets/models/icosphere/gltf/: untitled.gltf
test-assets/models/plane/: plane.mtl
test-assets/models/teapot/: teapot.mtl
test_assets/models/gordon/: hl1.mtl
utils/: threadpool.hh  ultratypes.h  utils.cc  utils.hh
